--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,9 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
     ports:
-       - "3306:3306"
+      - "3306:3306"
     volumes:
       - qualquerlugar_data:/var/lib/mysql
 
 volumes:
-  - qualquerlugar_data:
-
+  qualquerlugar_data:
